[gd_scene load_steps=8 format=3 uid="uid://but135ylsw5jl"]

[ext_resource type="PackedScene" path="res://World/Terrain/Background.tscn" id="2"]
[ext_resource type="Script" path="res://World/Level/End.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://buo25vgp3y7ea" path="res://World/Light/spot.png" id="3_nv3ly"]
[ext_resource type="PackedScene" uid="uid://dn47eubrdwcgl" path="res://UI/PauseMenu/PauseMenu.tscn" id="5"]
[ext_resource type="FontFile" path="res://Fonts/Text.tres" id="6"]

[sub_resource type="Animation" id="1"]
resource_name = "main"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 0.967742)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Text:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["THE END", "THE END?"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/savedata:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osuu0"]
_data = {
"main": SubResource("1")
}

[node name="End" type="Node2D"]
script = ExtResource("3")

[node name="Background" parent="." instance=ExtResource("2")]

[node name="PointLight2D" type="PointLight2D" parent="."]
texture_filter = 2
position = Vector2(644, 360)
blend_mode = 1
texture = ExtResource("3_nv3ly")
texture_scale = 6.35

[node name="AnimationFade" type="AnimationPlayer" parent="."]
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_osuu0")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Text" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -27.5
offset_right = 150.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 35
text = "THE END"

[node name="savedata" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = 15.0
offset_right = 191.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 21
text = "SAVE DATA CLEARED"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color(0, 0, 0, 1)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5")]

[connection signal="animation_finished" from="AnimationFade" to="." method="_on_Animation_animation_finished"]
